RESOLVED FIXED275909
Regression(279096@main) Crash under ScriptModuleLoader::notifyFinished()
https://bugs.webkit.org/show_bug.cgi?id=275909
Summary Regression(279096@main) Crash under ScriptModuleLoader::notifyFinished()
Chris Dumez
Reported 2024-06-26 10:52:15 PDT
Crash under ScriptModuleLoader::notifyFinished() since 279096@main: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x117b67100 WebCore::ScriptModuleLoader::notifyFinished(WebCore::ModuleScriptLoader&, WTF::URL&&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>>) + 476 1 WebCore 0x117b05038 WebCore::CachedModuleScriptLoader::notifyFinished(WebCore::CachedResource&, WebCore::NetworkLoadMetrics const&, WebCore::LoadWillContinueInAnotherProcess) + 104 2 WebCore 0x1185b0dfc WebCore::CachedResource::checkNotify(WebCore::NetworkLoadMetrics const&, WebCore::LoadWillContinueInAnotherProcess) + 160 3 WebCore 0x1185c8ea4 WebCore::CachedScript::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) + 188 4 WebCore 0x118576458 WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) + 964 5 WebKit 0x10558b164 WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&) + 256 6 WebKit 0x10589102c WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::Decoder&) + 496 7 WebKit 0x1058de934 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) + 332 ```
Attachments
Chris Dumez
Comment 1 2024-06-26 10:52:23 PDT
Chris Dumez
Comment 2 2024-06-26 10:52:39 PDT
Chris Dumez
Comment 3 2024-06-26 10:55:38 PDT
Note You need to log in before you can comment on or make changes to this bug.