Regression(279096@main) Crash under ScriptModuleLoader::notifyFinished() https://bugs.webkit.org/show_bug.cgi?id=275909 rdar://129414528

Reviewed by Brady Eidson.

Make sure ScriptExecutionContext::globalObject() is not null before dereferencing
it. Also do some smart pointer adoption.

* Source/WebCore/bindings/js/ScriptModuleLoader.cpp:
(WebCore::ScriptModuleLoader::notifyFinished):

Canonical link: https://commits.webkit.org/280386@main